# regex_parser

./: .gitignore  Automata.py  RElex.py  REparser.py  Readme.md  main.py  pyproject.toml  requirements.txt
