[tool.poetry]
name = "regex_parser"
version = "1.0"
description = "Regular Expressions Parser"
authors = ["oscaruno <dcpereira@inf.ufsm.br>"]

[tool.poetry.dependencies]
python = "^3.7"
sly = "^0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
